objects/LLC_BI__Requirement_Dependency_Template__mdt.object
<CustomObject>
    <description>A Requirement Dependency Template serves as a model used to create a Requirement Dependency between Requirements.</description>
    <fields>
        <fullName>LLC_BI__Controlling_Requirement__c</fullName>
        <description>This required field contains a reference to the Requirement Template which controls this dependency.</description>
        <inlineHelpText>This required field contains a reference to the Requirement Template which controls this dependency.</inlineHelpText>
        <label>Controlling Requirement</label>
        <referenceTo>LLC_BI__Requirement_Template__mdt</referenceTo>
        <relationshipLabel>Dependent Requirements</relationshipLabel>
        <relationshipName>Dependent_Requirements</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dependency_Type__c</fullName>
        <description>This required field defines the behavior of the dependency between the associated Requirements.  It should be copied to the Dependency Type field on Requirement Dependency records created from this template.</description>
        <inlineHelpText>This required field defines the behavior of the dependency between the associated Requirements.  It should be copied to the Dependency Type field on Requirement Dependency records created from this template.</inlineHelpText>
        <label>Dependency Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finish to Start</fullName>
                    <default>true</default>
                    <label>Finish to Start</label>
                </value>
                <value>
                    <fullName>Start to Start</fullName>
                </value>
                <value>
                    <fullName>Finish to Finish</fullName>
                </value>
                <value>
                    <fullName>Start to Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Dependent_Requirement__c</fullName>
        <description>This required field contains a reference to the Requirement Template which is controlled by this dependency.</description>
        <inlineHelpText>This required field contains a reference to the Requirement Template which is controlled by this dependency.</inlineHelpText>
        <label>Dependent Requirement</label>
        <referenceTo>LLC_BI__Requirement_Template__mdt</referenceTo>
        <relationshipLabel>Controlling Requirements</relationshipLabel>
        <relationshipName>Controlling_Requirements</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Requirement Dependency Template</label>
    <pluralLabel>Requirement Dependency Templates</pluralLabel>
</CustomObject>